fix a bug: Add button is visible when watching list and not logged in

--- a/src/styles/components/movie.scss
+++ b/src/styles/components/movie.scss
@@ -83,11 +83,6 @@
         }
         .movieCardFab {
             margin: 7px 10px 13px !important;
-            &.disabled {
-                opacity: 0.7;
-                cursor: default;
-                pointer-events: none;
-            }
             span {
                 position: absolute;
             }
